Project

General

Profile

Actions

Bug #20872

closed

rgw: lifecycle policies fail when filter xml tag is specified

Added by Abhishek Lekshmanan over 6 years ago. Updated over 6 years ago.

Status:
Resolved
Priority:
Normal
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

http://docs.aws.amazon.com/AmazonS3/latest/API/RESTBucketPUTlifecycle.html mentions a Filter xml tag and using this on s3 lifecycle seems to report a 400 error

eg.lc

<LifecycleConfiguration>
  <Rule>
    <ID>Transition</ID>
    <Filter>
       <Prefix>obj</Prefix>
    </Filter>
    <Status>Enabled</Status>
    <Expiration>
      <Days>1</Days>
    </Expiration>
  </Rule>
</LifecycleConfiguration>

Actions #1

Updated by Orit Wasserman over 6 years ago

  • Assignee set to Abhishek Lekshmanan
Actions #2

Updated by Orit Wasserman over 6 years ago

  • Status changed from New to 12
Actions #3

Updated by Abhishek Lekshmanan over 6 years ago

  • Status changed from 12 to In Progress
Actions #4

Updated by Yuri Weinstein over 6 years ago

Abhishek Lekshmanan wrote:

master pr: https://github.com/ceph/ceph/pull/16818

merged

Actions #5

Updated by Casey Bodley over 6 years ago

  • Status changed from In Progress to Resolved
Actions

Also available in: Atom PDF